# docs/swagger.json
@@ -106,6 +106,27 @@
             }
         },
         "/api/users": {
+            "put": {
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "user",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.UserCredentials"
+                        }
+                    }
+                ],
+                "responses": {}
+            },
             "post": {
                 "parameters": [
                     {
